Fixed nav so that text is visible at all times. Made changes in the grid so that the nav does not cover the h1 header at the top

--- a/css/grid.css
+++ b/css/grid.css
@@ -64,12 +64,18 @@
 	.grid-col-2of10 {
 		width: 100%;
 	}
+	body{
+		padding-top: 11rem;
+	}
 
 }
 @media (min-width: 30em) {
 
 	.grid-col-2of10 {
 		width: 20%;
+	}
+	body{
+		padding-top: 1rem;
 	}
 
 }
