--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ img{
     width: 100%;
     display: inline-block;
     padding: 0.5em 0.75em;
-    color: #FFF;
+    color: #000;
     background-color: rgba(67,133,166,0.05);
     text-decoration: none;
     border-bottom-style: solid;
@@ -62,6 +62,8 @@ img{
     border-bottom-color: rgba(255,255,255, 0);
     -webkit-transition: background-color 0.5s ease-out;
     transition: background-color 0.5s ease-out;
+    -webkit-transition: color 0.5s ease-out;
+    transition: color 0.5s ease-out;
     /*-webkit-transition: border-bottom-color 0.5s ease-out;
     transition: border-bottom-color 0.5s ease-out;*/
   }
@@ -69,6 +71,7 @@ img{
   .button-nav:hover, .button-nav:focus {
     background-color: rgba(67,133,166,1);
     border-bottom-color: rgba(0,0,0,1);
+    color: #FFF;
   }
 
   .button {
@@ -144,6 +147,7 @@ img{
     font-family: 'Agency FB';
     font-weight: bold;
     font-size: 2rem;
+    
 
 
   }
@@ -157,7 +161,7 @@ img{
 
   p {
     font-size: .8rem;
-    padding: .5rem;
+    /*padding: .5rem;*/
     text-align: left;
   }
 
